@@ -1,2 +1,2 @@
 # TP2
-new repo
+POUR EXECUTER client_fx, il faut faire la commande: java -jar  --module-path "C:\pathToJavaFX_SDK\lib" --add-modules javafx.controls,javafx.fxml client_fx.jar
